checked functionality of posts

--- a/templates/posts/form.html
+++ b/templates/posts/form.html
@@ -1,12 +1,13 @@
-from django import forms
-from .models import Post
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
-class PostForm(forms.ModelForm):
-    class Meta:
-        model = Post
-        fields = ['title', 'body', 'status']
-        widgets = {
-            'title': forms.TextInput(attrs={'class': 'form-control'}),
-            'body': forms.Textarea(attrs={'class': 'form-control'}),
-            'status': forms.Select(attrs={'class': 'form-control'}),
-        }
+{% block title %}New Post{% endblock title %}
+
+{% block content %}
+<h1>New Post</h1>
+<form method="post">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <input type="submit" class="btn btn-success" value="Create">
+</form>
+{% endblock content %}
