--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,13 @@
                     
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Draft</a>
+                            <a class="nav-link" href="{% url 'posts:create' %}">Create Post</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Archive</a>
+                            <a class="nav-link" href="{% url 'posts:drafts' %}">Draft</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'posts:archive' %}">Archive</a>
                         </li>
                         <li class="nav-item">
                             <form action="{% url 'logout' %}" method="POST">
@@ -49,9 +52,20 @@
                     {% endif %}
                 </ul>
             </div>
+        </div>
     </nav>
 
     <div class="container mt-4">
+        {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+        
         {% block content %}
         {% endblock content %}
     </div>
